# NS

./: .gitignore  README.md  SETUP_GUIDE.md  gradio_server.py  poetry.toml  pyproject.toml
notebooks/: 1.ipynb  dogs_cats.ipynb  server.ipynb
ui/: README.md  app.js  index.html
