[project]
name = "ns"
version = "0.1.0"
description = "FastAI"
authors = [
    {name = "Eddy",email = "eddyoceja001@mymdc.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

